k8s/minio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tds-minio
  namespace: default
  labels:
    app: tds-minio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tds-minio
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: tds-minio
    spec:
      containers:
        - name: minio
          image: minio/minio:latest
          imagePullPolicy: IfNotPresent
          args:
            - server
            - /data
            - --console-address
            - :9001
          ports:
            - containerPort: 9000
              name: minio-api
            - containerPort: 9001
              name: minio-console
          volumeMounts:
            - name: minio-storage
              mountPath: /data
          resources:
            limits:
              cpu: "1"
              memory: 512Mi
            requests:
              cpu: "100m"
              memory: 256Mi
      volumes:
        - name: minio-storage
          persistentVolumeClaim:
            claimName: tds-minio-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: default
spec:
  type: LoadBalancer
  ports:
    - name: api
      port: 9000
      targetPort: 9000
    - name: console
      port: 9001
      targetPort: 9001
  selector:
    app: tds-minio
