k8s/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tds-postgres
  namespace: default
  labels:
    app: tds-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tds-postgres
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: tds-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
          resources:
            limits:
              cpu: "1"
              memory: 512Mi
            requests:
              cpu: "100m"
              memory: 256Mi
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: tds-postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: default
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: tds-postgres
